# agents_child

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  demo.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  standalone_demo.py  test_basic.py
.github/workflows/: ci.yml
agent/: __init__.py  cli.py
agent/core/: __init__.py  agent.py  config.py  state.py
agent/knowledge/: __init__.py  entity_extractor.py  knowledge_graph.py  reasoning_engine.py  relation_extractor.py
agent/learning/: __init__.py  adaptation_engine.py  continuous_learner.py  feedback_processor.py  learning_scheduler.py
agent/processors/: __init__.py  context_processor.py  emotion_processor.py  text_processor.py
examples/: __init__.py  advanced_features.py  basic_usage.py  config_example.json  quick_start.py
tests/: __init__.py  conftest.py
tests/unit/: test_memory.py
